# workflows

./: .editorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  airflow.cfg  apis_instruction.md  docker-compose.yaml  pyproject.toml  requirements-airflow.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml  pull-request-main.yml  pytest.yml  test-and-build.yml
dags/: executor_config.py  test_dag.py
dags/aps/: aps.py  aps_api_client.py  aps_params.py  aps_process_file.py  aps_pull_api.py  parser.py  repository.py  utils.py
dags/clean/: cleanup_logs.py
dags/common/: cleanup.py  constants.py  countries_mapping.py  enhancer.py  enricher.py  exceptions.py  ftp_service.py  mappings.py  pull_ftp.py  repository.py  request.py  s3_service.py  scoap3_s3.py  sftp_service.py  utils.py
dags/elsevier/: elsevier_file_processing.py  elsevier_pull_ftp.py  elsevier_pull_sftp.py  ftp_service.py  metadata_parser.py  parser.py  repository.py  sftp_service.py  trigger_file_processing.py
dags/hindawi/: hindawi.py  hindawi_api_client.py  hindawi_file_processing.py  hindawi_params.py  hindawi_pull_api.py  parser.py  repository.py  utils.py  xml_extractors.py
dags/iop/: dag_pull_ftp.py  iop_process_file.py  iop_pull_sftp.py  parser.py  repository.py  sftp_service.py
dags/oup/: ftp_service.py  oup_process_file.py  oup_pull_ftp.py  parser.py  (+2 more)
data/: article2_springer.xml
documentation/: apis_instruction.md  harvester_docs.md
tests/: conftest.py
(+249 files in other folders)
