[tool.poetry]
name = "workflows"
version = "0.1.0"
description = ""
authors = ["cern-sis <cern-sis-ts-admin@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = {version = "2.6.0", extras = ["celery", "postgres", "redis"]}
structlog = "^23.1.0"
paramiko = "3.1.0"
boto3 = "1.26.76"
backoff = "1.10.0"
bleach = "6.0.0"
idutils = "^1.2.1"
inspire-utils = "3.0.25"
furl = "^2.1.3"
busypie = "0.4.5"
pydantic = "1.10.7"
jsonschema = "4.17.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.2.2"
pytest = "7.3.1"
coverage = "7.2.4"
pytest-cov = "4.0.0"
pytest-vcr = "1.0.2"
pytest-datadir = "1.3.1"
freezegun = "1.2.1"
requests-mock = "1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
